caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/refinement_type_mismatch.caffeine
_bad_type (Type): String { x | x in { "valid", 10 } }

Blueprints for "SLO"
  * "test":
    Requires { env: _bad_type }
    Provides { value: "x" }
